--- a/frosti.config.yaml
+++ b/frosti.config.yaml
@@ -30,8 +30,8 @@ monster:
 
 # 用户的个人信息
 user:
-  name: EveSunMaple # 用户名
-  site: "https://frosti.saroprock.com" # 用户的网站链接
+  name: Meta # 用户名
+  site: "https://metanef.github.io/" # 用户的网站链接
   avatar: /profile.png # 用户头像路径
   sidebar: # 侧边栏配置
     social:
