--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "packageManager": "pnpm@8.0.0",
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^4.2.1",
     "@astrojs/rss": "^4.0.11",
